# Spegetti

./: .gitignore  CMakeCache.txt  CMakeLists.txt
Headers/: Spegetti.h
Sources/: Spegetti.cpp
